// Use DBML to define your database structure
// Docs: https://www.dbml.org/docs

Table users {
  id integer [primary key]
  is_admin boolean
  name varchar
}

Table shops {
  id integer [primary key]
  name varchar
  longitude float
  latitude float
}

Table reviews {
  id integer [primary key]
  user_id integer [ref: > users.id]
  shop_id integer [ref: > shops.id]
  text varchar
}

Table notes {
  id integer [primary key]
  review_id integer [ref: > reviews.id]
  note_type_id integer [ref: > note_types.id]
  amount integer
}

Table note_types {
  id integer [primary key]
  name varchar
}